--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.29MB/s(Youtube:不良林), server: jm.b.speedabc.xyz, port: 42002, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: jm.b.speedabc.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.60MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.99MB/s(Youtube:不良林), server: 523hk2.fans8.xyz, port: 443, type: trojan, password: 96abb4d5-d709-40bd-9933-58f57b67c641, sni: 523hk2.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-3.95MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.34MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 42004, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-19.53MB/s(Youtube:不良林), server: jm.b.speedabc.xyz, port: 42002, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: jm.b.speedabc.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.67MB/s(Youtube:不良林), server: zh01lv5us04.feiguayun.xyz, port: 33087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
+  - {name: 🇨🇳 中国-745.5KB/s(Youtube:不良林), server: zh01lv5ge04.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
   - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.95MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.55MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.52MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-745.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-745.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-745.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-745.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-745.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-745.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-745.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
