--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.34MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 42004, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-19.53MB/s(Youtube:不良林), server: jm.b.speedabc.xyz, port: 42002, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: jm.b.speedabc.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.67MB/s(Youtube:不良林), server: zh01lv5us04.feiguayun.xyz, port: 33087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
-  - {name: 🇨🇳 中国-745.5KB/s(Youtube:不良林), server: zh01lv5ge04.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
-  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.55MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.52MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.27MB/s(Youtube:不良林), server: zh01lv5in04.feiguayun.xyz, port: 38087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
+  - {name: 🇺🇸 美国-5.38MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: mDmaAWoWXB, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-18.30MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.97MB/s(Youtube:不良林), server: shcu.alinkrelay.com, port: 44601, type: trojan, password: e9561799-2eee-47c5-a384-fc369f0eb792, sni: shcu.alinkrelay.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.96MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 32002, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.45MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇭🇰 香港-1.45MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-745.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-745.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-745.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-745.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-745.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-745.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-745.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
