--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.27MB/s(Youtube:不良林), server: zh01lv5in04.feiguayun.xyz, port: 38087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
-  - {name: 🇺🇸 美国-5.38MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: mDmaAWoWXB, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-18.30MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.97MB/s(Youtube:不良林), server: shcu.alinkrelay.com, port: 44601, type: trojan, password: e9561799-2eee-47c5-a384-fc369f0eb792, sni: shcu.alinkrelay.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.96MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 32002, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.45MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇭🇰 香港-1.45MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-11.79MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 32002, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-4.01MB/s(Youtube:不良林), server: 67tw01.fans8.xyz, port: 443, type: trojan, password: 96abb4d5-d709-40bd-9933-58f57b67c641, sni: 67tw01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-320.5KB/s(Youtube:不良林), server: jm.b.speedabc.xyz, port: 42011, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: jm.b.speedabc.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-7.07MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 捷克-335.4KB/s(Youtube:不良林), server: t03.ssrsub.com, port: 18443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: t03.ssrsub.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.90MB/s(Youtube:不良林), server: gycd1.csccdd.xyz, port: 52340, type: vmess, uuid: 1dc13504-e4ba-3c49-8e0b-6a3eb4e40335, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: gycd1.csccdd.xyz}}
+  - {name: 🇨🇳 中国-1.70MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-5.70MB/s(Youtube:不良林), server: us1.lolvps.xyz, port: 60070, type: vmess, uuid: 95886c76-9207-48bd-9e64-d1422e75ad89, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /AY920UMR, ws-headers: {Host: us1.lolvps.xyz}}
+  - {name: 🇺🇸 美国-4.40MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
+      - 捷克-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
+      - 捷克-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
+      - 捷克-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
+      - 捷克-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
+      - 捷克-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
+      - 捷克-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
+      - 捷克-335.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
