--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-11.79MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 32002, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-4.01MB/s(Youtube:不良林), server: 67tw01.fans8.xyz, port: 443, type: trojan, password: 96abb4d5-d709-40bd-9933-58f57b67c641, sni: 67tw01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-320.5KB/s(Youtube:不良林), server: jm.b.speedabc.xyz, port: 42011, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: jm.b.speedabc.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-7.07MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 捷克-335.4KB/s(Youtube:不良林), server: t03.ssrsub.com, port: 18443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: t03.ssrsub.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.90MB/s(Youtube:不良林), server: gycd1.csccdd.xyz, port: 52340, type: vmess, uuid: 1dc13504-e4ba-3c49-8e0b-6a3eb4e40335, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: gycd1.csccdd.xyz}}
-  - {name: 🇨🇳 中国-1.70MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-5.70MB/s(Youtube:不良林), server: us1.lolvps.xyz, port: 60070, type: vmess, uuid: 95886c76-9207-48bd-9e64-d1422e75ad89, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /AY920UMR, ws-headers: {Host: us1.lolvps.xyz}}
-  - {name: 🇺🇸 美国-4.40MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇸🇬 新加坡-4.47MB/s(Youtube:不良林), server: 165.154.253.68, port: 80, type: vmess, uuid: 1764e589-7fa9-43f6-9e7e-25733729f61f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 165.154.253.68}}
+  - {name: 🇺🇸 美国-4.91MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-563.7KB/s(Youtube:不良林), server: 46.3.240.10, port: 443, type: vmess, uuid: a9f93c36-6b1f-4f68-c067-aa1cff941f97, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: biliroam, ws-headers: {Host: 46.3.240.10}}
+  - {name: 🇸🇬 新加坡-6.32MB/s(Youtube:不良林), server: trojan1.udpgw.com, port: 443, type: trojan, password: affae2e0-e84b-11ec-b09f-1239d0255272, sni: trojan1.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 42006, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: cn.speedabc.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.09MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-371.9KB/s(Youtube:不良林), server: 47.243.87.171, port: 443, type: vmess, uuid: 4af38112-0854-48d8-9387-5ece4078a599, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /szGxn, ws-headers: {Host: 47.243.87.171}}
+  - {name: 🇨🇳 中国-463.0KB/s(Youtube:不良林), server: zh01lv5ca03.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
+  - {name: 🇨🇳 中国-396.8KB/s(Youtube:不良林), server: zh01lv5au05.feiguayun.xyz, port: 39087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
-      - 捷克-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-563.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-371.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
-      - 捷克-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-563.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-371.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
-      - 捷克-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-563.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-371.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-563.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-371.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
-      - 捷克-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-563.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-371.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
-      - 捷克-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-563.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-371.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
-      - 捷克-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-563.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-371.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.07MB/s(Youtube:不良林)
-      - 捷克-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-563.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-371.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
